<resources>
    <string name="app_name">ShareVideo</string>

    <!-- Main Activity -->
    <string name="lblChooseYourRole">Choose your role</string>
    <string name="btClient">Client</string>
    <string name="btServer">Server</string>
    <string name="btClientWifi">Client Wifi</string>
    <string name="btServerWifi">Server Wifi</string>
    <string name="btSettings">Settings</string>

    <!-- Client & Server Activity -->
    <string name="lblBluetoothDevices">Bluetooth devices</string>

    <!-- Client Activity -->
    <string name="btStart">Start</string>
    <string name="btStop">Stop</string>
    <string name="btSend">Send</string>

    <!-- Server Activity -->
    <string name="btDownload">Download this file</string>
    <string name="lblResult">Result</string>
    <string name="lblURL">URL</string>

    <!-- Client Wifi Activity -->
    <string name="btStartWifi">Start</string>
    <string name="btStopWifi">Stop</string>

    <!-- Server Wifi Activity -->
    <string name="btDownloadWifi">Download this file</string>
    <string name="lblResultWifi">Result</string>
    <string name="lblURLWifi">URL</string>

    <!-- Settings Activity -->
    <string name="lblSettingsAllowWifiConnect">Allow WI-FI connection</string>
    <string name="lblSettingsAllowBluetoothConnect">Allow Bluetooth connection</string>

</resources>
