<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fac.appandroid.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/lblChooseYourRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/lblChooseYourRole"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btServer"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btClient"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btClient"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lblChooseYourRole" />

    <Button
        android:id="@+id/btServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btServer"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lblChooseYourRole" />

</android.support.constraint.ConstraintLayout>
